--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -54,10 +54,12 @@ a {
       margin-left: 0; } }
 
 .page-header {
-  color: #fff;
+  color: #404040;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-color: #D8D8D8;
+  /*background-image: linear-gradient(120deg, #155799, #159957); */
+  background-image: url('../img/slmsheader.png');
+}
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -90,7 +92,7 @@ a {
 .project-tagline {
   margin-bottom: 2rem;
   font-weight: normal;
-  opacity: 0.7; }
+ }
 
 @media screen and (min-width: 64em) {
   .project-tagline {
