--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -54,7 +54,7 @@ a {
       margin-left: 0; } }
 
 .page-header {
-  color: #404040;
+  color: #CC0000;
   text-align: center;
   background-color: #D8D8D8;
   /*background-image: linear-gradient(120deg, #155799, #159957); */
